@@ -123,7 +123,7 @@ class OutputFileNameGenerator:
                 logger.error(
                     f'Directory "{dir}" does not exist. Use --create-dirs to automatically create.'
                 )
-                return None
+                return path
             logger.info(f'Creating directory "{dir}"')
             os.makedirs(dir)
 
